<resources>
    <string name="app_name">PersonalPhotos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folders_fragment_title">Folders</string>
    <string name="sync_fragment_title">Sync</string>
    <string name="settings_fragment_title">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="myCoolButton">dfg</string>
    <string name="failedCreatingRequiredFolder1">Не создал папку для сохранения в облаке.</string>
    <string name="failedCreatingRequiredFolder2">Адрес сервера, данные аккаунта верно указаны?</string>
    <string name="failedCreatingRequiredFolder3">Интернет на устройстве работает?</string>
    <string name="failedListingFilesInTheWEBDAV">Не узнал о файлах в папке PP облака.</string>
    <string name="failedUploadFileToTheWEBDAV">Не смог загрузить файл в облако.</string>
    <string name="lostConnectionWEBDAV">Связь с сервером WEBDAV потеряна.</string>
    <string name="someWEBDAVUserDataNotProvided">Указаны не все требуемые данные для работы с WEBDAV.</string>
    <string name="cancelledFolderPicker">Отмена выбора папки.</string>
    <string name="noDirsOnDeviceAreChosen">Для синхронизации выберите папки с файлами на устройстве.</string>
    <string name="nothingToUpload">Буквально нет файлов для синхронизации.</string>
    <string name="loginContainsProhibitedSymbols">Логин содержит не те символы</string>
    <string name="passwordContainsProhibitedSymbols">Пароль содержит не те символы</string>
    <string name="driveURLContainsProhibitedSymbols">Адрес содержит не те символы</string>
    <string name="uploadFolderNameContainsProhibitedSymbols">Название папки содержит не те символы</string>
    <string name="connectingToAuthServer">Подключение...</string>
    <string name="incorrectAuthServerLoginOrPassword">Неверные логин и/или пароль.</string>
    <string name="notConnectedToAuthServer">Нет связи с сервером авторизации.</string>
    <string name="askUserToCheckInternet">Проверьте сетевые настройки устройства.</string>
    <string name="authServerDisconnected">Сервер разорвал соединение.</string>
    <string name="performSync">Начать синхронизацию</string>
    <string name="stopSync">Отменить синхронизацию...</string>
    <string name="userAuthLogin">Логин</string>
    <string name="userAuthPassword">Пароль</string>
    <string name="authUser">Войти</string>
    <string name="developerInfo">\@ОАО \'Salty\', верховный разработчик:\nГеоргий Белин, РИБО-01-22</string>
    <string name="addDirs">Добавить директории</string>
    <string name="settingsTitle">Настройки</string>
    <string name="lastSyncMomentText">Последняя синхронизация:</string>
    <string name="filesSavedInTotalText">Файлов сохранено:</string>
    <string name="filesAreSavedInText">Файлы сохраняются в:</string>
    <string name="noFoldersOnDeviceChosenText">(пока что место не выбрано)</string>
    <string name="webdavSettingsSubMenuTitle">Настройки подключения по WEBDAV</string>
    <string name="driveURLPrefTitle">Адрес сервера</string>
    <string name="driveURLPrefHint">Например, \n\'https://webdav.yandex.ru/\'</string>
    <string name="howFolderShouldBeNamedOnWEBDAVPrefLong">Название папки на сервере</string>
    <string name="howFolderShouldBeNamedOnWEBDAVPrefShort">Название папки на сервере, которая будет использоваться для сохранения загружаемых файлов</string>
    <string name="WEBDAVloginPrefTitle">Логин учётной записи</string>
    <string name="WEBDAVloginPref">Логин учётной записи</string>
    <string name="WEBDAVloginPrefHint">Например, Ваша почта или адрес сети сервера</string>
    <string name="userWEBDAVPasswordPrefTitle">Пароль учётной записи</string>
    <string name="userWEBDAVPasswordPrefSummary">Учтите: в случае с Яндексом, например, нужно создать отдельный пароль сугубо для подключения по WEBDAV</string>
    <string name="miscellaneousSubMenuTitle">Дополнительно</string>
    <string name="autoFillAuthLoginPasswordPrefTitle">Автозаполнение логина и пароля на экране входа</string>
    <string name="clearAllDataPrefTitle">Удалить все данные из приложения</string>
    <string name="clearAllDataPrefHint">Файлы на сервере тронуты не будут</string>
    <string name="SyncFilesShortShortcut">Выгрузить</string>
    <string name="SyncFilesLongShortcut">Выгрузить файлы</string>
    <string name="shortcutBackgroundDownloadStart">Запуск выгрузки...</string>
    <string name="shortcutNoAuthWarning">Сначала авторизуйтесь в приложении.</string>
</resources>