<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/webdavSettingsSubMenuTitle">
        <EditTextPreference
            app:key="driveURL"
            app:title="@string/driveURLPrefTitle"
            app:useSimpleSummaryProvider="false"
            app:summary="@string/driveURLPrefHint" />

        <EditTextPreference
            app:key="folderNameUploadIn"
            app:defaultValue="PersonalPhotos"
            app:singleLineTitle="false"
            app:dialogTitle="@string/howFolderShouldBeNamedOnWEBDAVPrefLong"
            app:title="@string/howFolderShouldBeNamedOnWEBDAVPrefShort"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogTitle="@string/WEBDAVloginPrefTitle"
            app:key="userWEBDAVLogin"
            app:title="@string/WEBDAVloginPref"
            app:summary="@string/WEBDAVloginPrefHint" />

        <EditTextPreference
            app:key="userWEBDAVPassword"
            app:singleLineTitle="false"
            app:summary="@string/userWEBDAVPasswordPrefSummary"
            app:title="@string/userWEBDAVPasswordPrefTitle"
            app:enableCopying="false" />

        <PreferenceCategory app:title="@string/miscellaneousSubMenuTitle">

            <SwitchPreferenceCompat
                app:key="autoPasteLogin"
                app:singleLineTitle="false"
                app:title="@string/autoFillAuthLoginPasswordPrefTitle"
                app:defaultValue="true" />

        </PreferenceCategory>

    </PreferenceCategory>

    <Preference
        app:title="@string/clearAllDataPrefTitle"
        app:key="deletePreferences"
        app:icon="@drawable/icon_trash"
        app:summary="@string/clearAllDataPrefHint" />

</PreferenceScreen>